# Student-Grade-Management-System

./: .gitignore  LAB_DOCUMENTATION.md  PRESENTATION_SCRIPT.md  README.md  RELEASE_v.md  build.md  build_deb.sh
gui/: CMakeLists.txt  addstudentdialog.cpp  addstudentdialog.h  chartsview.cpp  chartsview.h  light_style.qss  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  student.h  style.qss
packaging/DEBIAN/: control
packaging/usr/share/applications/: studentgrademanager.desktop
terminal/: main.cpp
